[gd_scene load_steps=7 format=3 uid="uid://dqaj5xwbupye5"]

[ext_resource type="Script" uid="uid://dx7gtp6cspyxo" path="res://Scenes/ClueBoard/clue_board.gd" id="1_e5bxp"]
[ext_resource type="Texture2D" uid="uid://cjbnb5q3sbbl5" path="res://Assets/ClueBoard/corkboard.jpg" id="1_iovmh"]
[ext_resource type="PackedScene" uid="uid://du6dmjpnp2tcx" path="res://Drag tests Clueboard/object.tscn" id="2_n0tf7"]
[ext_resource type="PackedScene" uid="uid://750t2vxjxxrr" path="res://Scenes/ClueBoard/droppablearea.tscn" id="3_e5bxp"]
[ext_resource type="Script" uid="uid://esbe6arm13dy" path="res://Scenes/ClueBoard/camera_2d.gd" id="4_n0tf7"]
[ext_resource type="Texture2D" uid="uid://mu5hhwp5k1e1" path="res://Assets/ClueBoard/VictimsThumbnails/Thumbnail_Stephany_Romy.png" id="6_xuebf"]

[node name="ClueBoard" type="Node2D"]
script = ExtResource("1_e5bxp")

[node name="ColorRect" type="Sprite2D" parent="."]
texture = ExtResource("1_iovmh")

[node name="CardsOnBoard" type="Node2D" parent="."]

[node name="object" parent="CardsOnBoard" instance=ExtResource("2_n0tf7")]
position = Vector2(776, 403)

[node name="object2" parent="CardsOnBoard" instance=ExtResource("2_n0tf7")]
position = Vector2(977, 158)

[node name="object3" parent="CardsOnBoard" instance=ExtResource("2_n0tf7")]
position = Vector2(706, 181)

[node name="DroppableAreas" type="Node2D" parent="."]

[node name="droppablearea" parent="DroppableAreas" instance=ExtResource("3_e5bxp")]
visible = false
position = Vector2(249, 546)

[node name="droppablearea2" parent="DroppableAreas" instance=ExtResource("3_e5bxp")]
visible = false
position = Vector2(946, 527)

[node name="droppablearea3" parent="DroppableAreas" instance=ExtResource("3_e5bxp")]
visible = false
position = Vector2(581, 509)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -2500
limit_right = 2500
script = ExtResource("4_n0tf7")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PolaroidsButton" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_right = 95.0
offset_bottom = 74.0
text = "Polaroids"

[node name="PolaroidsList" type="PanelContainer" parent="HUD/Control"]
layout_mode = 0
offset_left = 95.0
offset_right = 303.0
offset_bottom = 295.0

[node name="GridContainer" type="GridContainer" parent="HUD/Control/PolaroidsList"]
layout_mode = 2
columns = 2

[node name="StephanyRomy_Button" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton2" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton3" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton4" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton5" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton6" type="TextureButton" parent="HUD/Control/PolaroidsList/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_xuebf")
ignore_texture_size = true
stretch_mode = 6

[connection signal="pressed" from="HUD/Control/PolaroidsButton" to="." method="_on_polaroids_button_pressed"]
[connection signal="pressed" from="HUD/Control/PolaroidsList/GridContainer/StephanyRomy_Button" to="." method="_on_stephany_romy_button_pressed"]
